@@ -564,6 +564,10 @@ HISTORY
 
   ++ Bug fixes:
 
+  2008-01-06 Jonathan Larmour
+  * dhcp.c: fix bug #19927: "DHCP NACK problem" by clearing any existing set IP
+  address entirely on receiving a DHCPNAK, and restarting discovery.
+
   2007-12-21 Simon Goldschmidt
   * sys.h, api_lib.c, api_msg.c, sockets.c: fix bug #21698: "netconn->recv_avail
     is not protected" by using new macros for interlocked access to modify/test
